--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>El titulo del post</title>
     <link rel="stylesheet" href="/css/estilos.css">
   </head>
   <body>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <p>y este es el parrafo de inicion donde vamos a explicar las coasa increibles</p>
+
+    </div>
     <h1>aqui vamos a hacer un blog post</h1>
     <p>y este es el parrafo de inicio</p>
-
   </body>
 </html>
