--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,13 @@
   </head>
   <body>
     <div id="container">
-      <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>y este es el parrafo de inicion donde vamos a explicar las coasa increibles</p>
-
+        <div id="cabecera">
+            cabecera
+        </div>
+        <div id="post">
+          <h1>Este es el titulo atractivo e interesante del post</h1>
+          <p>y este es el parrafo de inicio donde vamos a explicar las coasa increibles que se pueden hacer con ramas</p>
+        </div>
     </div>
-    <h1>aqui vamos a hacer un blog post</h1>
-    <p>y este es el parrafo de inicio</p>
   </body>
 </html>
