todo es lo que parece

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
   <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            todo siempre es lo que parece ser 
         </div>
         <div id="post">
           <h1>Este es el titulo atractivo e interesante del post</h1>
